samples/_failures_safe/1761360466_22e34d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f00d6b4.c: In function ‘main’:
./samples/SAFE/__tmp_2f00d6b4.c:156:105: error: expected ‘)’ at end of input
  156 |             printf("Invalid transition from state %s with input '%c'\n", get_current_state_name(sm), cmd
      |                   ~                                                                                     ^
      |                                                                                                         )
./samples/SAFE/__tmp_2f00d6b4.c:156:13: error: expected declaration or statement at end of input
  156 |             printf("Invalid transition from state %s with input '%c'\n", get_current_state_name(sm), cmd
      |             ^~~~~~
./samples/SAFE/__tmp_2f00d6b4.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2f00d6b4.c:156:13: error: expected declaration or statement at end of input
